--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,86 +1,5 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif
-}
-body{
-    display: flex;
-   
-}
-.img{
-    width: 45%;
-    height: 100vh;
-    background-image: url(../img/fondo.jpg);
-    background-size: cover; 
-}
+@import 'universal';
+@import 'inicio';
+@import 'registro';
 
-.cuadro{
-    width: 55%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(241, 243, 243);
-    .formulario{
-        width: 40%;
-        padding: 25px;
-        display: flex;
-        flex-direction: column;
-        box-shadow: 0px 0px 1px 0px;
-        .grupo-input{
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            margin-bottom: 20px;
-            box-shadow: 0px 0px 1px 0px;
-            span{
-                color: gray;
-                margin-right: 10px;
-                font-size: 22px;
-            }
-            .usuario, .contraseña{
-                border: 0;
-                font-size: 16px;
-                background-color: transparent;
-                &:focus{
-                    outline: none;
-                }
-            }
-        }
-        h2{
-            color: gray;
-            font-size: 25px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .registro{
-            color: gray;
-            text-align: center;
-            margin-bottom: 20px;
-            text-decoration: none;
-        }
-        .botones{
-            .enviar{
-                border: 0;
-                width: 100%;
-                padding: 15px;
-                color: #fff;
-                span{
-                    width: 100%;
-                    display: block;
-                    font-size: 25px;
-                    text-align: center;
-                }
-            }
-        }
-    }
-}
-
-.bloqueo{
-    background-color: rgb(175, 3, 3);
-}
-
-.verificado{
-    cursor: pointer;
-    background-color: green;
-}
+@import 'extend';
