--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,14 +18,15 @@ body {
 }
 
 .cuadro {
-  width: 55%;
+  width: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: rgb(241, 243, 243);
 }
 .cuadro .formulario {
-  width: 40%;
+  width: 350px;
   padding: 25px;
   display: flex;
   flex-direction: column;
@@ -51,36 +52,88 @@ body {
 .cuadro .formulario .grupo-input .usuario:focus, .cuadro .formulario .grupo-input .contraseña:focus {
   outline: none;
 }
-.cuadro .formulario h2 {
+.cuadro .formulario .titulo-login {
   color: gray;
   font-size: 25px;
   text-align: center;
   margin-bottom: 20px;
-}
-.cuadro .formulario .registro {
-  color: gray;
-  text-align: center;
-  margin-bottom: 20px;
-  text-decoration: none;
 }
 .cuadro .formulario .botones .enviar {
   border: 0;
   width: 100%;
   padding: 15px;
   color: #fff;
+  cursor: pointer;
+  background-color: rgb(0, 109, 211);
 }
-.cuadro .formulario .botones .enviar span {
-  width: 100%;
-  display: block;
+.cuadro .formulario .registro {
+  cursor: pointer;
+  color: gray;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+
+.cuadro-registro {
+  z-index: -1;
+  background-color: rgb(241, 243, 243);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.formulario-registro {
+  width: 350px;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 1px 0px;
+}
+.formulario-registro .grupo-input {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 1px 0px;
+}
+.formulario-registro .grupo-input .usuario, .formulario-registro .grupo-input .contraseña {
+  border: 0;
+  font-size: 16px;
+  background-color: transparent;
+}
+.formulario-registro .grupo-input .usuario:focus, .formulario-registro .grupo-input .contraseña:focus {
+  outline: none;
+}
+
+.titulo-registro {
+  color: gray;
   font-size: 25px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.bloqueo {
-  background-color: rgb(175, 3, 3);
-}
-
-.verificado {
+.registrar {
+  border: 0;
+  width: 100%;
+  padding: 15px;
+  color: #fff;
   cursor: pointer;
-  background-color: green;
+  background-color: rgb(0, 109, 211);
+}
+
+.volver {
+  cursor: pointer;
+  color: gray;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+
+.visible {
+  z-index: 0 !important;
 }/*# sourceMappingURL=estilos.css.map */
