--- a/css/_inicio.scss
+++ b/css/_inicio.scss
@@ -1,14 +1,14 @@
-.img{
-    width: 45%;
-    height: 100vh;
-    background-image: url(../img/fondo.jpg);
-    background-size: cover; 
-}
 
+.mensaje{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
 .cuadro{
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: rgb(241, 243, 243);
