Actualizaciones para entrega final

--- a/css/_inicio.scss
+++ b/css/_inicio.scss
@@ -1,8 +1,12 @@
 
 .mensaje{
+    color: white;
+    padding: 25px;
     width: 100%;
     text-align: center;
     margin-bottom: 20px;
+    position: absolute;
+    top: 0;
 }
 .cuadro{
     width: 100%;
