--- a/css/_registro.scss
+++ b/css/_registro.scss
@@ -1,8 +1,12 @@
 
 .mensaje-dos{
     width: 100%;
+    padding: 25px;
+    color: white;
     text-align: center;
     margin-bottom: 20px;
+    position: absolute;
+    top: 0;
 }
 .cuadro-registro{
     z-index: -1;
