--- a/css/_main.scss
+++ b/css/_main.scss
@@ -17,15 +17,39 @@ body{
         list-style: none;
     }
 }
-.boton-registro, .boton-buscar{
+.boton-registro, .boton-buscar, .eliminar-todo, .mostrar-todo{
     border: 0;
     margin: 10px;
     padding: 15px;
     color: white;
-    background-color: none;
-    background-color: rgb(0, 109, 211);
+    font-weight: bold;
+    border-radius: 10px;
     &:hover{
         cursor: pointer;
+    }
+}
+.boton-registro{
+    background-color: green;
+    &:hover{
+        background-color: rgb(1, 75, 1);
+    }
+}
+.mostrar-todo{
+    background-color: rgb(0, 109, 211);
+    &:hover{
+        background-color: rgb(1, 86, 165);
+    }
+}
+.eliminar-todo{
+    background-color: red;
+    &:hover{
+        background-color: rgb(116, 0, 0);
+    }
+}
+.boton-buscar{
+    background-color: rgb(211, 120, 0);
+    &:hover{
+        background-color: rgb(160, 109, 1);
     }
 }
 .formulario-item{
@@ -40,7 +64,7 @@ body{
     left: 50%;
     transform: translateX(-50%);
     transition: all 1s;
-    background-color:  rgb(0, 109, 211);
+    background-color: green;
     .titulo-formulario{
         color: white;
         text-align: center;
@@ -55,12 +79,13 @@ body{
             outline: none;
         }
     }
-
-    .cerrar{
-        margin-bottom: 0;
+    .cerrar, .guardar{
+        &:hover{
+            cursor: pointer;
+            background-color: rgb(202, 201, 201);
+        }
     }
 }
-
 .contenedor{
     display: flex;
     justify-content: center;
@@ -94,4 +119,11 @@ body{
             }
         }
     }
+}
+
+.numero-item{
+    width: 100%;
+    color: gray;
+    font-size: 45px;
+    text-align: center;
 }
