--- a/css/_main.scss
+++ b/css/_main.scss
@@ -148,13 +148,26 @@ body{
     width: 50%;
     margin-bottom: 5px;
     padding: 5px;
+    &:focus{
+        outline: none;
+    }
 }
-.text-input{
-    display: block;
-    width: 100%;
+.grupo-input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .verde{
     color: green;
     font-weight: bold;
+}
+.morado{
+    color: rgb(252, 0, 252);
+    font-weight: bold;
+}
+label{
+    width: 80px;
+    display: block;
+    text-align: left;
 }
