--- a/css/_main.scss
+++ b/css/_main.scss
@@ -152,7 +152,7 @@ body{
         outline: none;
     }
 }
-.grupo-input{
+.grupo-input-registro{
     display: flex;
     justify-content: center;
     align-items: center;
