--- a/css/estilos.css
+++ b/css/estilos.css
@@ -314,7 +314,7 @@ body {
   outline: none;
 }
 
-.grupo-input {
+.grupo-input-registro {
   display: flex;
   justify-content: center;
   align-items: center;
